# bridge

./: Cargo.toml  main.rs  out.brg
codegenerator/: Cargo.toml
codegenerator/src/: opcodes.rs
interpreter/: .gitignore  Cargo.toml
interpreter/src/: main.rs  opcodes.rs  runtime.rs  util.rs
parser/: Cargo.toml
parser/src/: ast.rs  lexer.rs  main.rs  parser.rs  printer.rs  runtime.rs  symbol_table.rs  treewalker.rs  typechecker.rs  utils.rs
parser/tests/: factorial.brg  return.brg  shadow.brg  tuple.brg  var_asgn.brg  var_def.brg
src/: ast.rs  lexer.rs  main.rs  parser.rs  printer.rs  runtime.rs  symbol_table.rs  treewalker.rs  typechecker.rs  unparser.rs  utils.rs  watcher.rs
tests/: arithmetic.brg  factorial.brg  record.brg  tuple.brg  value.brg
